# kfbslide

./: .gitignore  LICENSE  MANIFEST.in  README.md  README_EN.md  README_zh.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
examples/: read_region.py
src/kfbslide/: __init__.py  _cache.py  _exceptions.py  _jpeg_backend.py  _kfbformat.py  _slide.py
tests/: test_basic.py
