[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kfbslide"
version = "0.2.0"
description = "Pure Python KFB whole-slide image reader with OpenSlide-compatible API"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Yifan Feng", email = "evanfeng97@gmail.com" },
]
keywords = [
    "kfb",
    "whole-slide-image",
    "openslide",
    "pathology",
    "wsi",
    "kfbio",
    "digital-pathology",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Image Processing",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]
dependencies = [
    "Pillow>=9.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "ruff",
    "mypy",
]

[project.urls]
Homepage = "https://github.com/yifanfeng97/kfbslide"
Documentation = "https://github.com/yifanfeng97/kfbslide#readme"
Repository = "https://github.com/yifanfeng97/kfbslide"
Issues = "https://github.com/yifanfeng97/kfbslide/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/kfbslide"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
    "/examples",
    "/README.md",
    "/LICENSE",
]

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "W"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
pythonpath = ["src"]
